[package]
name = "rk-utils"
version = "0.1.0"
edition = "2021"

authors = ["Rockie Guo <rockie@kitmi.com.au>"]
categories = ["Text processing", "Algorithms"]
description = "A collection of utility functions and data structures for rust."

keywords = ["utility", "string_processing", "topological_sorting", "trie", "longest_match"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rockie/rk-utils"
documentation = "https://docs.rs/rk-utils"

[lib]
doctest = false
